# taskmaster

./: .env  .gitignore  Cargo.toml  README.md  docker-compose.yml  tst
docker/server/: Dockerfile  entrypoint.sh
resources/: simple.json  simpleDir.json  supervisord.conf  valid.yaml
resources/valid/: exitCodes.json  partially_valid.json  redirection.json  simple.json
src/: args.rs  cli.rs  client.ts  config.ts  daemon.rs  lib.rs  main.rs  server.ts
src/client/shell/: history.rs  input.rs  mod.rs
src/config/: config.rs  mod.rs  parameters.rs  parse.rs  process.rs
src/lib/commands/: Command.class.ts  Exit.class.ts  Help.class.ts  Reload.class.ts  Restart.class.ts  Shutdown.class.ts  Start.class.ts  Status.class.ts  Stop.class.ts  matchCommand.ts
src/lib/config/: ConfigFile.class.ts  types.ts
src/lib/logger/: Logger.class.ts
src/lib/process/: Container.class.ts  Process.class.ts  types.ts
src/lib/repl/: index.ts
src/lib/tcp/: TCPConnecter.class.ts  TCPListener.class.ts  TCPMessage.class.ts
src/lib/utils/: daemon.ts  date.ts  envVars.ts  index.ts  signals.ts
src/server/: cli.rs  config.rs  daemon.rs  mod.rs
src/server/command/: mod.rs  start.rs  status.rs  stop.rs  utils.rs
src/server/config/: config.rs  mod.rs  parameters.rs  parse.rs  process.rs
src/server/process/: mod.rs  process.rs  time.rs
src/shell/: command.rs  input.rs  mod.rs  shell.rs  traits.rs
src/shell/command/: start.rs  stop.rs  utils.rs
tests/: isEmpty.test.ts
