[package]
name = "taskmaster"
version = "0.1.0"
authors = ["Jeremie <jeremiegthr@gmail.com>"]
edition = "2018"

[[bin]]
name = "taskmaster"
path = "src/main.rs"

[lib]
name = "taskmaster"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust = "0.4.5"
